// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delegates Profile Detail Render and click Edit 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-top-large StyledProps--padding-right-xlarge StyledProps--padding-bottom-large StyledProps--padding-left-xlarge"
    style="background-color: rgba(219, 241, 255, 0.46); position: relative; height: 143px;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/dummy/settings"
            >
              <span
                class="bp3-icon bp3-icon-cog StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary7"
                icon="cog"
              >
                <svg
                  data-icon="cog"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    cog
                  </desc>
                  <path
                    d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary"
              >
                common.accountSettings
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="12"
                viewBox="0 0 8 14"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/dummy/settings/resources/delegates/list"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary"
              >
                delegate.delegates
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="12"
                viewBox="0 0 8 14"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/dummy/settings/resources/delegates/configs"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary"
              >
                delegate.delegatesConfigurations
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="12"
                viewBox="0 0 8 14"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <p
        class="StyledProps--font StyledProps--main"
        style="font-size: 20px;"
      >
        Primary
      </p>
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400"
      >
        The primary profile for the account
      </p>
    </div>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon"
      data-test="editDelegateConfigurationButton"
      id="editDelegateConfigurationBtn"
      style="position: absolute; top: 50px; right: 50px;"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-floppy-disk StyledProps--main StyledProps--padding-right-xsmall"
        icon="floppy-disk"
      >
        <svg
          data-icon="floppy-disk"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            floppy-disk
          </desc>
          <path
            d="M15.71 2.29l-2-2A.997.997 0 0013 0h-1v6H4V0H1C.45 0 0 .45 0 1v14c0 .55.45 1 1 1h14c.55 0 1-.45 1-1V3c0-.28-.11-.53-.29-.71zM14 15H2V9c0-.55.45-1 1-1h10c.55 0 1 .45 1 1v6zM11 1H9v4h2V1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        save
      </span>
    </button>
  </div>
  <div
    class="StyledProps--font StyledProps--main"
    style="height: calc(100vh - 143px); overflow: auto; background: rgba(228, 235, 244, 0.2);"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-xxlarge"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          style="width: 600px;"
        >
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-xlarge"
            style="box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.08), 0px 0.5px 2px rgba(96, 97, 112, 0.16); border-radius: 4px;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-bold"
              style="color: rgb(34, 39, 45);"
            >
              overview
            </p>
            <div
              class="StyledProps--font StyledProps--main entry"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="font-size: 12px; line-height: 16px; letter-spacing: 0.2px;"
              >
                delegate.CONFIGURATION_NAME
              </p>
              <div
                class="TextInput--main"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    class="bp3-input"
                    type="text"
                    value="Primary"
                  />
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main entry"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="font-size: 12px; line-height: 16px; letter-spacing: 0.2px;"
              >
                delegates.delegateIdentifier
              </p>
            </div>
            <div
              class="StyledProps--font StyledProps--main entry"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="font-size: 12px; line-height: 16px; letter-spacing: 0.2px;"
              >
                description
              </p>
              <div
                class="TextInput--main"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    class="bp3-input"
                    type="text"
                    value="The primary profile for the account"
                  />
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main entry"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="font-size: 12px; line-height: 16px; letter-spacing: 0.2px;"
              >
                tagsLabel
              </p>
              <div
                class="bp3-popover-wrapper TagInput--tagInput bp3-fill"
              >
                <div
                  class="bp3-popover-target"
                >
                  <div
                    class=""
                  >
                    <div
                      class="bp3-input bp3-tag-input bp3-fill bp3-multi-select"
                    >
                      <div
                        class="bp3-tag-input-values"
                      >
                        <input
                          class="bp3-input-ghost bp3-multi-select-tag-input-input"
                          placeholder="delegate.enterTags"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-xlarge"
            style="box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.08), 0px 0.5px 2px rgba(96, 97, 112, 0.16); border-radius: 4px;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-bold"
              style="color: rgb(34, 39, 45);"
            >
              delegate.Scope
            </p>
            <div
              class="StyledProps--font StyledProps--main"
              style="height: 100%;"
            >
              <h3
                class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--margin-bottom-xxlarge"
                level="3"
              >
                delegates.newDelegateConfigWizard.scopeSubtitle
              </h3>
              <div
                class="Layout--horizontal StyledProps--main envContainer StyledProps--padding-left-xxlarge StyledProps--padding-top-large StyledProps--padding-bottom-xxlarge"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox envCheckbox StyledProps--main"
                >
                  <input
                    checked=""
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  delegates.newDelegateConfigWizard.nonprodEnv
                </label>
                <div
                  class="bp3-popover-wrapper MultiSelect--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="bp3-input bp3-tag-input bp3-disabled bp3-multi-select"
                      >
                        <div
                          class="bp3-tag-input-values"
                        >
                          <input
                            class="bp3-input-ghost bp3-multi-select-tag-input-input"
                            disabled=""
                            placeholder="- delegates.newDelegateConfigWizard.specEnvNotPossible -"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main envContainer StyledProps--padding-left-xxlarge StyledProps--padding-top-large StyledProps--padding-bottom-xxlarge"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox envCheckbox StyledProps--main"
                >
                  <input
                    checked=""
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  delegates.newDelegateConfigWizard.prodEnv
                </label>
                <div
                  class="bp3-popover-wrapper MultiSelect--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="bp3-input bp3-tag-input bp3-disabled bp3-multi-select"
                      >
                        <div
                          class="bp3-tag-input-values"
                        >
                          <input
                            class="bp3-input-ghost bp3-multi-select-tag-input-input"
                            disabled=""
                            placeholder="- delegates.newDelegateConfigWizard.specEnvNotPossible -"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-xlarge"
          style="box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.08), 0px 0.5px 2px rgba(96, 97, 112, 0.16); border-radius: 4px; width: 550px;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-bold"
            style="color: rgb(34, 39, 45);"
          >
            delegate.Init_Script
          </p>
          <textarea
            class="codeEditor"
            placeholder="delegate.initScriptPlaceholder"
          >
            test this
          </textarea>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Delegates Profile Detail initial render 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--padding-top-large StyledProps--padding-right-xlarge StyledProps--padding-bottom-large StyledProps--padding-left-xlarge"
    style="background-color: rgba(219, 241, 255, 0.46); position: relative; height: 143px;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
      >
        <div
          class="Layout--horizontal StyledProps--main Breadcrumbs--breadcrumbs StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
        >
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/dummy/settings"
            >
              <span
                class="bp3-icon bp3-icon-cog StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary7"
                icon="cog"
              >
                <svg
                  data-icon="cog"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    cog
                  </desc>
                  <path
                    d="M15.19 6.39h-1.85c-.11-.37-.27-.71-.45-1.04l1.36-1.36c.31-.31.31-.82 0-1.13l-1.13-1.13a.803.803 0 00-1.13 0l-1.36 1.36c-.33-.17-.67-.33-1.04-.44V.79c0-.44-.36-.8-.8-.8h-1.6c-.44 0-.8.36-.8.8v1.86c-.39.12-.75.28-1.1.47l-1.3-1.3c-.3-.3-.79-.3-1.09 0L1.82 2.91c-.3.3-.3.79 0 1.09l1.3 1.3c-.2.34-.36.7-.48 1.09H.79c-.44 0-.8.36-.8.8v1.6c0 .44.36.8.8.8h1.85c.11.37.27.71.45 1.04l-1.36 1.36c-.31.31-.31.82 0 1.13l1.13 1.13c.31.31.82.31 1.13 0l1.36-1.36c.33.18.67.33 1.04.44v1.86c0 .44.36.8.8.8h1.6c.44 0 .8-.36.8-.8v-1.86c.39-.12.75-.28 1.1-.47l1.3 1.3c.3.3.79.3 1.09 0l1.09-1.09c.3-.3.3-.79 0-1.09l-1.3-1.3c.19-.35.36-.71.48-1.1h1.85c.44 0 .8-.36.8-.8v-1.6a.816.816 0 00-.81-.79zm-7.2 4.6c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary"
              >
                common.accountSettings
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="12"
                viewBox="0 0 8 14"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/dummy/settings/resources/delegates/list"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary"
              >
                delegate.delegates
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="12"
                viewBox="0 0 8 14"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-justifyContent-flex-start"
          >
            <a
              class="Breadcrumbs--breadcrumb"
              href="/account/dummy/settings/resources/delegates/configs"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--intent-primary"
              >
                delegate.delegatesConfigurations
              </p>
            </a>
            <span
              class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-right-xsmall StyledProps--padding-left-xsmall"
              data-icon="main-chevron-right"
            >
              <svg
                height="12"
                viewBox="0 0 8 14"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.7 6.3l-6-6C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7L5.6 7 .3 12.3c-.2.2-.3.4-.3.7 0 .6.4 1 1 1 .3 0 .5-.1.7-.3l6-6c.2-.2.3-.4.3-.7s-.1-.5-.3-.7z"
                  fill="#4d5969"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <p
        class="StyledProps--font StyledProps--main"
        style="font-size: 20px;"
      >
        Primary
      </p>
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400"
      >
        The primary profile for the account
      </p>
    </div>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon"
      data-test="editDelegateConfigurationButton"
      id="editDelegateConfigurationBtn"
      style="position: absolute; top: 50px; right: 50px;"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-edit StyledProps--main StyledProps--padding-right-xsmall"
        icon="edit"
      >
        <svg
          data-icon="edit"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            edit
          </desc>
          <path
            d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-button-text"
      >
        edit
      </span>
    </button>
  </div>
  <div
    class="StyledProps--font StyledProps--main"
    style="height: calc(100vh - 143px); overflow: auto; background: rgba(228, 235, 244, 0.2);"
  >
    <div
      class="StyledProps--font StyledProps--main StyledProps--padding-xxlarge"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
          style="width: 600px;"
        >
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-xlarge"
            style="box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.08), 0px 0.5px 2px rgba(96, 97, 112, 0.16); border-radius: 4px;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-bold"
              style="color: rgb(34, 39, 45);"
            >
              overview
            </p>
            <div
              class="StyledProps--font StyledProps--main entry"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="font-size: 12px; line-height: 16px; letter-spacing: 0.2px;"
              >
                delegate.CONFIGURATION_NAME
              </p>
              <p
                class="StyledProps--font StyledProps--main"
                style="font-size: 14px; line-height: 24px; color: rgb(34, 39, 45); letter-spacing: -0.01px;"
              >
                Primary
              </p>
            </div>
            <div
              class="StyledProps--font StyledProps--main entry"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="font-size: 12px; line-height: 16px; letter-spacing: 0.2px;"
              >
                delegates.delegateIdentifier
              </p>
            </div>
            <div
              class="StyledProps--font StyledProps--main entry"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="font-size: 12px; line-height: 16px; letter-spacing: 0.2px;"
              >
                description
              </p>
              <p
                class="StyledProps--font StyledProps--main"
                style="font-size: 14px; line-height: 24px; color: rgb(34, 39, 45); letter-spacing: -0.01px;"
              >
                The primary profile for the account
              </p>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main StyledProps--padding-xlarge"
            style="box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.08), 0px 0.5px 2px rgba(96, 97, 112, 0.16); border-radius: 4px;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-bold"
              style="color: rgb(34, 39, 45);"
            >
              delegate.Scope
            </p>
            <div
              class="StyledProps--font StyledProps--main"
              style="height: 100%;"
            >
              <h3
                class="StyledProps--font StyledProps--font-h3 StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--margin-bottom-xxlarge"
                level="3"
              >
                delegates.newDelegateConfigWizard.scopeSubtitle
              </h3>
              <div
                class="Layout--horizontal StyledProps--main envContainer StyledProps--padding-left-xxlarge StyledProps--padding-top-large StyledProps--padding-bottom-xxlarge"
              >
                <label
                  class="bp3-control bp3-checkbox bp3-disabled StyledProps--font Checkbox--checkbox envCheckbox StyledProps--main"
                >
                  <input
                    checked=""
                    disabled=""
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  delegates.newDelegateConfigWizard.nonprodEnv
                </label>
                <div
                  class="bp3-popover-wrapper MultiSelect--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="bp3-input bp3-tag-input bp3-disabled bp3-multi-select"
                      >
                        <div
                          class="bp3-tag-input-values"
                        >
                          <input
                            class="bp3-input-ghost bp3-multi-select-tag-input-input"
                            disabled=""
                            placeholder="- delegates.newDelegateConfigWizard.specEnvNotPossible -"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main envContainer StyledProps--padding-left-xxlarge StyledProps--padding-top-large StyledProps--padding-bottom-xxlarge"
              >
                <label
                  class="bp3-control bp3-checkbox bp3-disabled StyledProps--font Checkbox--checkbox envCheckbox StyledProps--main"
                >
                  <input
                    checked=""
                    disabled=""
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  delegates.newDelegateConfigWizard.prodEnv
                </label>
                <div
                  class="bp3-popover-wrapper MultiSelect--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class=""
                    >
                      <div
                        class="bp3-input bp3-tag-input bp3-disabled bp3-multi-select"
                      >
                        <div
                          class="bp3-tag-input-values"
                        >
                          <input
                            class="bp3-input-ghost bp3-multi-select-tag-input-input"
                            disabled=""
                            placeholder="- delegates.newDelegateConfigWizard.specEnvNotPossible -"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-xlarge"
          style="box-shadow: 0px 0px 1px rgba(40, 41, 61, 0.08), 0px 0.5px 2px rgba(96, 97, 112, 0.16); border-radius: 4px; width: 550px;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-weight-bold"
            style="color: rgb(34, 39, 45);"
          >
            delegate.Init_Script
          </p>
          <textarea
            class="codeEditor"
            disabled=""
          >
            test this
          </textarea>
        </div>
      </div>
    </div>
  </div>
</div>
`;
